@@ -1,3 +1,5 @@
+* Correct Element#cumulativeScrollOffset for IE, Safari, and Opera < 9.5.  [jddalton]
+
 * Make Form#serializeElements more closely follow the W3C specifications. [#85 state:resolved] [jddalton]
 
 * Make Element#viewportOffset return correct values for "fixed" positioned elements. Closes #10869. [kangax, watersco]
